frontend: fixed not stretching of search bar

--- a/frontend/src/components/ui/TextInput.scss
+++ b/frontend/src/components/ui/TextInput.scss
@@ -9,6 +9,7 @@
     box-shadow: var(--text-inp--box-shadow);
     caret-color: var(--text-inp--caret-color);
     color: var(--text-inp--color);
+    flex-grow: 1;
 
     &::placeholder {
         font-style: italic;
