--- a/frontend/src/views/SearchView.scss
+++ b/frontend/src/views/SearchView.scss
@@ -23,6 +23,8 @@
                 display: flex;
                 gap: 10px;
                 width: 100%;
+                flex-wrap: wrap;
+                gap: 15px;
 
                 .search-type-select {
                     padding: 8px 12px;
@@ -32,18 +34,8 @@
                     font-size: 14px;
                     cursor: pointer;
                     min-width: 150px;
+                    flex-shrink: 0;
                 }
-
-                /* Стили для TextInput остаются без изменений */
-            }
-
-
-            .hierarchy-head-right-box {
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                justify-content: flex-end;
-                gap: 15px;
             }
         }
 
